Adjust issue with 'falling' buttons being too close together on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -258,7 +258,7 @@
             right: -4rem;
             transform: rotate(-30deg);
             @media screen and (max-width: $sm-max) {
-                top: 9rem;
+                top: 9.5rem;
             }
         }
         &:nth-child(2) {
